# mlops-platform

./: .gitignore  Dockerfile  README.md  dot.env  inference_pipeline.py  makefile  mlpipeline.py  mlplatform.ipynb  mlplatform_pipeline.py  pre-commit-config.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy_to_vertex_ai.yml
batch_prediction/: Dockerfile.batch  batch_predict.py  batch_predict_test.py  batch_requirements.txt
batch_prediction/batch_prediction_test/: Dockerfile.batch  batch_predict_test.py  batch_requirements.txt
components/: decision_tree_train.py  deploy_model.py  evaluate_model.py  load_data.py  mlpipeline.py  preprocess_data.py  random_forest_train.py  train_decision_tree.py  train_random_forest.py
config/: config  config.py
docker/: Dockerfile.poetry  Dockerfile.prediction  Dockerfile.requirement
notebooks/: batch_predict.ipynb  mlplatform.ipynb  mlplatform_pipeline.json
tests/: test_mlpipeline.py
