[tool.poetry]
name = "mlplatform"
version = "0.1.0"
description = "This is an ML platform for running ML workflows on GCP resources"
authors = ["Kabeer Akande <46060542+kbakande@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.9"
pandas = "^2.1.3"
numpy = "^1.26.2"
scipy = "^1.11.3"
scikit-learn = "1.3.2"
matplotlib = "^3.8.2" 
google-cloud-aiplatform = "^1.36.4"
python-dotenv = "^1.0.0"
joblib = "^1.3.2"
pyyaml = "^6.0.1"
kfp = "^2.4.0"
pickleshare = "^0.7.5"
google-cloud-bigquery = "^3.14.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

